added resize option

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -60,7 +60,7 @@
             <div class="user pull-right">
               <li class="item dropdown" >
                 <a href="#/admin" class="dropdown-toggle" data-toggle="dropdown"  data-delay="1000" data-close-others="false">
-                  <img src="admin/img/avatar.jpg">
+                  <img src="img/avatar.jpg">
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
 
