--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -7,6 +7,7 @@
 	<title>RDash AngularJS</title>
   <!-- STYLES -->
   <link rel="stylesheet" href="css/main.min.css"/>
+  
   <!-- SCRIPTS -->
   <!-- Custom Scripts -->
  
@@ -30,6 +31,39 @@
         <li class="sidebar-list">
           <a ui-sref=".invoice">Invoicing <span class="menu-icon fa fa-table"></span></a>
         </li>
+        <li class="sidebar-list" >
+                <a href="#/admin" class="dropdown-toggle" data-toggle="dropdown"  data-delay="1000" data-close-others="false">
+                  <img src="img/avatar.jpg">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right">
+
+                  <li class="dropdown-header">
+                    Joe Bloggs
+                  </li>
+                  <li class="divider"></li>
+                  <li class="link">
+                    <a href="#">
+                      Profile
+                    </a>
+                  </li>
+                  <li class="link">
+                    <a href="#">
+                      Menu Item
+                    </a>
+                  </li>
+                  <li class="link">
+                    <a href="#">
+                      Menu Item
+                    </a>
+                  </li>
+                  <li class="divider"></li>
+                  <li class="link">
+                    <a href="#">
+                      Logout
+                    </a>
+                  </li>
+                </ul>
+              </li>
       </ul>
       <div class="sidebar-footer">
         <div class="col-xs-4">
